--- a/views/about.phtml
+++ b/views/about.phtml
@@ -6,6 +6,8 @@
         Any and all modifications of the game that change the physics or controls in any way is strictly banned, with the exception of console commands "sv_player_funnel_into_portals" and "developer".
         <br>
         In particular, note that this means that changing the server tickrate is forbidden.
+        <br><br>
+        Futhermore, all top 5 scores obtained after May 11th, 2017 require proof in the form of a demo or a video. If no sufficient proof can be provided, the score will be removed.
     </div>
 
     <h1 class="title">Console commands</h1>
@@ -14,7 +16,7 @@
         <table class="table table-condensed">
             <tr>
                 <td>sv_player_funnel_into_portals</td>
-                <td>Enabling this will curve the player into nearby portals when falling or jumping.</td>
+                <td>Disabling this will stop the player from curving into nearby portals when falling.</td>
             </tr>
             <tr>
                 <td>developer</td>
@@ -63,7 +65,7 @@
                 </td>
             </tr>
             <tr>
-                <td>cl_enable_remote_splitscreen 1</td>
+                <td>cl_enable_remote_splitscreen</td>
                 <td>Shows the partner view while replaying a cooperative demo.</td>
             </tr>
         </table>
@@ -174,32 +176,42 @@
     <h1 class="title">Team</h1>
     <div class="container">
         <ul>
-            <li><a href="/profile/76561198047900528">iVerb</a>: Administrator, lead developer</li>
-            <li><a href="/profile/76561198039230536">Zypeh</a>: Administrator</li>
-            <li><a href="/profile/76561198015678746">Klooger</a>: Administrator</li>
-            <li><a href="/profile/76561198095730281">Portal Rex</a>: Administrator</li>
+            <li><a href="/profile/76561198047900528">iVerb</a>: Lead developer, admin</li>
+            <li><a href="/profile/76561198095730281">Portal Rex</a>: Admin</li>
+            <li><a href="/profile/76561198043899549">Jetwash_787</a>: Admin</li>
+            <li><a href="/profile/76561198039230536">Zypeh</a>: Admin</li>
+            <li><a href="/profile/76561198015678746">Klooger</a>: Admin</li>
         </ul>
     </div>
 
-    <h1 class="title">Miscellaneous features</h1>
+    <!-- <h1 class="title">Miscellaneous features</h1>
     <div class="container">
-        <ul>
+        <ul> -->
 <!--            <li>Instead of using a steam ID, you can bookmark and navigate to profiles by using a boardname. Example: <a href="/profile/iVerb" class="unnamedURL"></a>.</li>-->
-            <li>Your boardname is by default the same as your steam nickname (updated daily), but can be changed under <a href="/editprofile">Edit profile</a>.</li>
-        </ul>
+            <!-- <li>Your boardname is by default the same as your steam nickname (updated daily), but can be changed under <a href="/editprofile">Edit profile</a>.</li> -->
+        <!-- </ul>
+    </div> -->
+
+    <h1 class="title">API</h1>
+    <div class="container">
+        A JSON representation of the current leaderboard status can be retrieved by appending '/json' to any page URL, i.e. <a href="/chamber/47458/json" class="unnamedURL"></a> or <a href="/profile/iVerb/json" class="unnamedURL"></a>.
     </div>
 
-    <h1 class="title">Project</h1>
+<!--     <h1 class="title">Feature suggestions</h1>
+    <div class="container">Forward any feature suggestions you may have to <a href="/profile/76561198047900528">iVerb</a></div> -->
+
+    <h1 class="title">Hosting</h1>
     <div class="container">
-        <p>
+        <!-- <p> -->
         <!-- Source code: coming soon -->
-        The source code can be found <a href="https://github.com/iVerb1/Portal2Boards">here</a>.
+        <!-- The source code can be found <a href="https://github.com/iVerb1/Portal2Boards">here</a>. -->
+        <!-- </p> -->
+        <p>
+        This site is currently hosted on <a href="https://www.fastcomet.com/">FastComet</a>.
         </p>
         <p>
-        This site is currently hosted for free on <a href="https://www.openshift.com/">OpenShift</a>.
-        </p>
-        <p>
-        Demos are stored using <a href="https://www.google.com/drive/">Google Drive</a>. The folder containg all demos can be found <a href="https://drive.google.com/folderview?id=0B3FgAePoQ2khX3gzc2dlNDdVZm8&usp=sharing">here</a>.
+        Demos are stored using <a href="https://www.google.com/drive/">Google Drive</a>. 
+        The folder containg all demos can be found <a href="https://drive.google.com/folderview?id=0B3FgAePoQ2khX3gzc2dlNDdVZm8&usp=sharing">here</a>.
         </p>
     </div>
 
