--- a/views/parts/announcement.phtml
+++ b/views/parts/announcement.phtml
@@ -1,14 +1,11 @@
-<?php $cookieName = "site-notification-09-25-2016"; ?>
-<?php $giveAnnouncement = false; ?>
+<?php $cookieName = "site-notification-02-10-2017"; ?>
+<?php $giveAnnouncement = true; ?>
 
 <?php if(!isset($_COOKIE[$cookieName]) && $giveAnnouncement): ?>
 
     <div id="announcement">
         <span class="notification">
-            <b>Announcement:</b> since the weekly scheduled Steam maintenance on 09-20-2016, leaderboard data for non-official chambers
-            (Container Ride, Portal Carousel, etc.) can no longer be fetched, meaning that new scores you obtain for these chambers will not be automatically synced to this website.
-            The leaderboards do however still work in-game. Until this is resolved (which could very well be never), submit any records you obtain for these chambers via your profile.
-            <!-- Note that another effect of this maintenance is that syncing new scores from the Steam leaderboards now takes longer (up to 20 minutes). -->
+            <b>Announcement:</b> Thanks to everyone for donating to cover the yearly server costs! You guys are not only fast in Portal 2, but also in raising funds. We met the donation goal in under half an hour!
         </span>
         <span class="close-btn"></span>
     </div>
