--- a/views/parts/footer.phtml
+++ b/views/parts/footer.phtml
@@ -2,5 +2,5 @@
     <div class="footerleft">
         Originally developed and designed by <a href="/profile/76561198043770492" target="_blank">Nuclear.</a> Improved and maintained by <a href="/profile/76561198047900528" target="_blank">iVerb</a>
     </div>
-    <div class="footeright">This page was generated in <?php echo microtime(true) - $this->startupTimestamp; ?> seconds</div>
+    <div class="footeright">This page was generated in <?php echo round(microtime(true) - $this->startupTimestamp, 3); ?> seconds</div>
 </div>
