--- a/views/parts/navigation.phtml
+++ b/views/parts/navigation.phtml
@@ -14,7 +14,7 @@
 <div class="nav_dropdown">
     <div id="cube_icon" class="nav_icon"></div>
     <div class="btnLabel">Aggregated</div>
-    <ul style="width:150px">
+    <ul style="width:140px">
       <li>
           <a href="/aggregated/overall" style="height: 29px">
             <div class="nav_icon" style="background: url('/images/cup_noborder.jpg'); background-size: 29px 29px;"></div>
@@ -26,7 +26,7 @@
               <div class="nav_icon" style="background: url('/images/sp_noborder.jpg'); background-size: 29px 29px;"></div>
               <div class="btnLabel">Single Player</div>
           </div>
-          <ul style="width:185px">
+          <ul style="width:165px">
               <li>
                 <a href="/aggregated/sp">
                     <div class="nav_icon"><i class="fa fa-star" aria-hidden="true"></i></div>
@@ -68,6 +68,38 @@
     </ul>
 </div>
 
+<div class="nav_dropdown">
+    <div id="aperture_icon" class="nav_icon"></div>
+    <div class="btnLabel">More</div>
+    <ul style="width:140px">
+      <li class="nav_dropdown">
+          <a href="http://www.speedrun.com/Portal_2" target="_blank" style="height: 29px">
+              <div class="nav_icon" style="background: url('/images/running.png'); background-size: 29px 29px;"></div>
+              <div class="btnLabel">Full runs</div>
+          </a>          
+      </li>
+      <li class="nav_dropdown">
+          <a href="https://discord.gg/0ohYsRHYh540eI50" target="_blank" style="height: 29px">
+              <div class="nav_icon" style="background: url('/images/discord_noborder.png'); background-size: 29px 29px;"></div>
+              <div class="btnLabel">Discord</div>
+          </a>          
+      </li>
+        <li class="nav_dropdown">
+          <a href="https://github.com/iVerb1/Portal2Boards" target="_blank" style="height: 29px">
+              <div class="nav_icon" style="background: url('/images/github.png'); background-size: 29px 29px;"></div>
+              <div class="btnLabel">GitHub</div>
+          </a>          
+      </li>
+        <li>
+          <a href="/about" style="height: 29px">
+            <div id="aperture_icon" class="nav_icon" style="background: url('/images/cupcake.png'); background-size: 29px 29px;"></div>
+            <div class="btnLabel">About</div>
+          </a>
+      </li>
+    </ul>
+</div>
+
+
 <!--<div class="nav_dropdown">-->
 <!--    <div id="lp_icon" class="nav_icon"></div>-->
 <!--    <div class="label">Least Portals</div>-->
@@ -92,10 +124,10 @@
 <!--    <div class="label">Least Portals</div>-->
 <!--</a>-->
 
-<a href="/about" class="nav_button">
+<!-- <a href="/about" class="nav_button">
     <div id="aperture_icon" class="nav_icon"></div>
     <div class="btnLabel">About</div>
-</a>
+</a> -->
 
 <script>
 
