--- a/views/parts/main.phtml
+++ b/views/parts/main.phtml
@@ -13,6 +13,9 @@
             <script type="text/javascript" src="<?=$path; ?>"></script>
         <?php endforeach; ?>
 
+        <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
